Code of the footer added in the base layout

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,7 +35,17 @@
             {% endblock %}
         </div>
         <footer class="container-fluid">
-            <div class="container">FOOTER</div>
+            <div class="container">
+                <div class="row">
+                    <ul class="col-lg-3">
+                        <li>Codascii</li>
+                        <li>Qui sommes nous</li>
+                    </ul>
+                    <ul class="col-lg-3"><li>1234567890</li></ul>
+                    <ul class="col-lg-3"><li>1234567890</li></ul>
+                    <ul class="col-lg-3"><li>1234567890</li></ul>
+                </div>
+            </div>
         </footer>
         {% block javascripts %}
         {# Ajoutez ces lignes JavaScript si vous comptez vous servir des fonctionnalités du bootstrap Twitter #}
