--- a/web/sass/_bootstrap.scss
+++ b/web/sass/_bootstrap.scss
@@ -56,6 +56,6 @@
 @import "bootstrap/responsive-utilities";
 
 // Baydamafish styles
-@import "baydamafish/variables";
-@import "baydamafish/header";
-@import "baydamafish/footer";
+@import "codascii/variables";
+@import "codascii/header";
+@import "codascii/footer";
