--- a/web/sass/codascii/_header.scss
+++ b/web/sass/codascii/_header.scss
@@ -26,6 +26,7 @@ header{
 					&:hover, &:focus{
 						color: $brand-primary;
 						text-decoration: none;
+						transition: .2s;
 					}
 				}
 			}
