--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8"/>
+        <meta name="application-name" content="Codascii"/>
+        <meta name="theme-color" content="#55D00">
+        <meta name="description" content="Venez découvrir ou approfondir vos connaissance en terme de développement. Des tutos sont postés chaque semaines pour vous.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="{{ asset('favicon.png') }}" />
         <title>{% block title %}Codascii{% endblock %}</title>
