--- a/src/Codascii/CoreBundle/Resources/views/Default/contact.html.twig
+++ b/src/Codascii/CoreBundle/Resources/views/Default/contact.html.twig
@@ -1,5 +1,9 @@
 {% extends "::base.html.twig" %}
 
+{% block title %}Contact - {{ parent() }}{% endblock %}
+
 {% block body %}
-<h1>Contact</h1>
+<div class="container">
+	<h1>Contact</h1>
+</div>
 {% endblock %}
