Add of the TutoBundle

--- a/src/Codascii/CoreBundle/Resources/views/Core/contact.html.twig
+++ b/src/Codascii/CoreBundle/Resources/views/Core/contact.html.twig
@@ -1,4 +1,4 @@
-{% extends "::base.html.twig" %}
+{% extends "CodasciiCoreBundle::base.html.twig" %}
 
 {% block title %}Contact - {{ parent() }}{% endblock %}
 
