--- a/src/Codascii/CoreBundle/Resources/views/Core/search.html.twig
+++ b/src/Codascii/CoreBundle/Resources/views/Core/search.html.twig
@@ -1,4 +1,8 @@
-{% extends "::base.html.twig" %}
+{% extends "CodasciiCoreBundle::base.html.twig" %}
+
+{% block title %}
+	{{ q }} - {{ parent() }}
+{% endblock %}
 
 {% block body %}
 <div class="container">
