--- a/web/sass/_bootstrap.scss
+++ b/web/sass/_bootstrap.scss
@@ -57,5 +57,6 @@
 
 // Baydamafish styles
 @import "codascii/tutoriels";
+@import "codascii/right-block";
 @import "codascii/header";
 @import "codascii/footer";
