--- a/src/Codascii/TutoBundle/Resources/views/Tuto/allTuto.html.twig
+++ b/src/Codascii/TutoBundle/Resources/views/Tuto/allTuto.html.twig
@@ -1,1 +1,31 @@
-ICI TOUT LES TUTOS EN FONCTION DU LANGAGE
+{% extends "CodasciiTutoBundle::layout.html.twig" %}
+
+{% block titre %}
+    {{ parent() }} : {{ language|upper }}
+{% endblock %}
+
+{% block body_tutoriels %}
+	<div class="row">
+		
+	</div>
+{% endblock %}
+
+{% block right_block %}
+    <div class="panel panel-primary">
+    	<div class="panel-heading"><h3 class="panel-title">Tous les tutoriels {{ language }}</h3></div>
+    	<div class="panel-body">
+			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+    	</div>
+    </div>
+{% endblock %}
