--- a/src/Codascii/CoreBundle/Resources/views/base.html.twig
+++ b/src/Codascii/CoreBundle/Resources/views/base.html.twig
@@ -18,7 +18,9 @@
             <nav class="container">
                 <div class="row">
                     <div class="col-lg-2">
-                        <img src="{{ asset('logo.png') }}" id="logo" alt="Logo Codascii" class="img-responsive">
+                        <a href="{{ path('codascii_homepage') }}" title="Aller à la page d'accueil">
+                            <img src="{{ asset('logo.png') }}" id="logo" alt="Logo Codascii" class="img-responsive">
+                        </a>
                     </div>
                     <div class="col-lg-6 col-lg-offset-4">
                         <ul>
