--- a/web/sass/bootstrap/_variables.scss
+++ b/web/sass/bootstrap/_variables.scss
@@ -27,7 +27,7 @@ $brand-danger:          #d9534f !default;
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               #fff !default;
+$body-bg:               #f2f2f2 !default;
 //** Global text color on `<body>`.
 $text-color:            $gray-dark !default;
 
@@ -871,4 +871,4 @@ $dl-horizontal-offset:        $component-offset-horizontal !default;
 //** Point at which .dl-horizontal becomes horizontal
 $dl-horizontal-breakpoint:    $grid-float-breakpoint !default;
 //** Horizontal line color.
-$hr-border:                   $gray-lighter !default;
+$hr-border:                   $gray-light !default;
