--- a/web/sass/_bootstrap.scss
+++ b/web/sass/_bootstrap.scss
@@ -56,6 +56,7 @@
 @import "bootstrap/responsive-utilities";
 
 // Baydamafish styles
+@import "codascii/block";
 @import "codascii/tutoriels";
 @import "codascii/right-block";
 @import "codascii/header";
