--- a/src/Codascii/TutoBundle/Resources/views/Tuto/tuto.html.twig
+++ b/src/Codascii/TutoBundle/Resources/views/Tuto/tuto.html.twig
@@ -4,6 +4,13 @@
 	{{ language|upper ~ " - #" ~ numero ~ " " ~ title }}
 {% endblock %}
 
+{% block breadcrumb %}
+    <li><a href="{{ path('codascii_homepage') }}">Accueil</a></li>
+    <li><a href="{{ path('codascii_home_tuto') }}">Tutoriels</a></li>
+    <li><a href="{{ path('codascii_all_tuto', {'language': language}) }}">{{ language[:1]|upper ~ language[1:] }}</a></li>
+    <li class="active"><a href="{{ path('codascii_tuto', {'language': language, 'number': numero, 'slug': slug }) }}">{{ "#" ~ numero ~ " " ~ title }}</a></li>
+{% endblock %}
+
 {% block titre %}
     {{ language|upper ~ " - #" ~ numero ~ " " ~ title }}
 {% endblock %}
@@ -15,21 +22,21 @@
 {% endblock %}
 
 {% block right_block %}
-    <div class="panel panel-primary">
+    <div class="panel panel-info">
     	<div class="panel-heading"><h3 class="panel-title">Tous les tutoriels {{ language }}</h3></div>
-    	<div class="panel-body">
-			<p><a href="">tout les tuto de ce language ici !!!</a></p>
-			<p><a href="">tout les tuto de ce language ici !!!</a></p>
-			<p><a href="">tout les tuto de ce language ici !!!</a></p>
-			<p><a href="">tout les tuto de ce language ici !!!</a></p>
-			<p><a href="">tout les tuto de ce language ici !!!</a></p>
-			<p><a href="">tout les tuto de ce language ici !!!</a></p>
-			<p><a href="">tout les tuto de ce language ici !!!</a></p>
-			<p><a href="">tout les tuto de ce language ici !!!</a></p>
-			<p><a href="">tout les tuto de ce language ici !!!</a></p>
-			<p><a href="">tout les tuto de ce language ici !!!</a></p>
-			<p><a href="">tout les tuto de ce language ici !!!</a></p>
-			<p><a href="">tout les tuto de ce language ici !!!</a></p>
+    	<div class="list-group">
+			<a href="" class="list-group-item">tout les tuto de ce language ici !!!</a>
+			<a href="" class="list-group-item">tout les tuto de ce language ici !!!</a>
+			<a href="" class="list-group-item">tout les tuto de ce language ici !!!</a>
+			<a href="" class="list-group-item">tout les tuto de ce language ici !!!</a>
+			<a href="" class="list-group-item">tout les tuto de ce language ici !!!</a>
+			<a href="" class="list-group-item">tout les tuto de ce language ici !!!</a>
+			<a href="" class="list-group-item">tout les tuto de ce language ici !!!</a>
+			<a href="" class="list-group-item">tout les tuto de ce language ici !!!</a>
+			<a href="" class="list-group-item">tout les tuto de ce language ici !!!</a>
+			<a href="" class="list-group-item">tout les tuto de ce language ici !!!</a>
+			<a href="" class="list-group-item">tout les tuto de ce language ici !!!</a>
+			<a href="" class="list-group-item">tout les tuto de ce language ici !!!</a>
     	</div>
     </div>
 {% endblock %}
