Dev in the TutoBundle's views

--- a/src/Codascii/CoreBundle/Resources/views/base.html.twig
+++ b/src/Codascii/CoreBundle/Resources/views/base.html.twig
@@ -36,22 +36,19 @@
         </header>
         <div id="header-next" class="container-fluid">
             <div class="container">
-                <form method="get" action="{{ path('codascii_search') }}">
+                <ul class="breadcrumb">
+                <span>VOUS ÊTES ICI : </span>
+                {% block breadcrumb %}
+                    <li><a href="{{ path('codascii_homepage') }}"><span class="glyphicon glyphicon-home"></span>&nbsp; Accueil</a></li>
+                {% endblock %}
+                </ul>
+                <!-- <form method="get" action="{{ path('codascii_search') }}" class="pull-right">
                     <span class="glyphicon glyphicon-search"></span>
                     <input type="search" name="q" placeholder="Recherche" />
-                </form>
+                </form> -->
             </div>
         </div>
-        <div class="container-fluid">
-            <div class="container">
-                <ul class="breadcrumb">
-                {% block breadcrumb %}
-            
-                {% endblock %}                    
-                </ul>
-            </div>
-        </div>
-
+        <p>&nbsp;</p>
         <div class="container-fluid">
             {% block body %}
             {% endblock %}
