--- a/src/Codascii/TutoBundle/Resources/views/layout.html.twig
+++ b/src/Codascii/TutoBundle/Resources/views/layout.html.twig
@@ -3,7 +3,7 @@
 {% block title %} Tutoriels &middot; {{ parent() }}{% endblock %}
 
 {% block breadcrumb %}
-    <li><a href="{{ path('codascii_homepage') }}">Accueil</a></li>
+    <li><a href="{{ path('codascii_homepage') }}"><span class="glyphicon glyphicon-home"></span>&nbsp; Accueil</a></li>
     <li class="active"><a href="{{ path('codascii_home_tuto') }}">Tutoriels</a></li>
 {% endblock %}
 
