--- a/src/Codascii/TutoBundle/Resources/views/Tuto/allTuto.html.twig
+++ b/src/Codascii/TutoBundle/Resources/views/Tuto/allTuto.html.twig
@@ -3,7 +3,7 @@
 {% block title %} Tutoriels &middot; {{ language|upper }}{% endblock %}
 
 {% block breadcrumb %}
-    <li><a href="{{ path('codascii_homepage') }}">Accueil</a></li>
+    <li><a href="{{ path('codascii_homepage') }}"><span class="glyphicon glyphicon-home"></span>&nbsp; Accueil</a></li>
     <li><a href="{{ path('codascii_home_tuto') }}">Tutoriels</a></li>
     <li class="active"><a href="{{ path('codascii_all_tuto', {'language': language}) }}">{{ language[:1]|upper ~ language[1:] }}</a></li>
 {% endblock %}
