--- a/web/sass/codascii/_header.scss
+++ b/web/sass/codascii/_header.scss
@@ -4,6 +4,15 @@ header{
 			margin-top: 2px;
 		}
 
+		#logo-xs{
+			width: 35px;
+			height: 35px;
+			float: left;
+			margin-left: 15px;
+			margin-top: 8px;
+			margin-bottom: 8px;
+		}
+
 		ul{
 			margin: 0px;
 			padding: 0px;
