Developpement CSS for the '.block' element

--- a/src/Codascii/TutoBundle/Resources/views/Tuto/index.html.twig
+++ b/src/Codascii/TutoBundle/Resources/views/Tuto/index.html.twig
@@ -21,9 +21,9 @@
 				<h4>{{ language.name|upper }}</h4>
 			</div>
 			<div class="list-group">
-				<p class="list-group-item"><a href="">Test</a></p>
-				<p class="list-group-item"><a href="">Test</a></p>
-				<p class="list-group-item"><a href="">Test</a></p>
+				<a href="javascript:void(0)" class="list-group-item">Test</a>
+				<a href="javascript:void(0)" class="list-group-item">Test</a>
+				<a href="javascript:void(0)" class="list-group-item">Test</a>
 			</div>
 		</div>
 	{% endfor %}
