--- a/src/Codascii/TutoBundle/Resources/views/layout.html.twig
+++ b/src/Codascii/TutoBundle/Resources/views/layout.html.twig
@@ -9,7 +9,7 @@
 
 {% block body %}
     <div class="container">
-    	<div class="col-lg-9 block">
+    	<div class="col-lg-9 block big-block">
     		<h1>{% block titre %}Tutoriels{% endblock %}</h1><hr/>
     		{% block body_tutoriels %}
     		    
