--- a/web/sass/codascii/_variables.scss
+++ b/web/sass/codascii/_variables.scss
@@ -2,4 +2,4 @@
 $block-bg-color: white;
 $block-border-color: $gray-lighter;
 $block-border-top-color: darken($brand-primary, 20%);
-$block-heading-bg: $block-border-top-color;
+$block-heading-bg: $gray-dark;
