--- a/web/sass/codascii/_block.scss
+++ b/web/sass/codascii/_block.scss
@@ -1,5 +1,10 @@
 .block{
 	background-color: $block-bg-color;
-	border: 1px solid $block-border-color;
 	border-top: 5px solid $block-border-top-color;
+}
+
+.block.big-block{
+	border-right: 1px solid $block-border-color;
+	border-bottom: 1px solid $block-border-color;
+	border-left: 1px solid $block-border-color;
 }
