Set theme-color and modified tutoriel's panels

--- a/src/Codascii/CoreBundle/Resources/views/base.html.twig
+++ b/src/Codascii/CoreBundle/Resources/views/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="application-name" content="Codascii"/>
-        <meta name="theme-color" content="#55D00">
+        <meta name="theme-color" content="#44B300">
         <meta name="description" content="Venez découvrir ou approfondir vos connaissance en terme de développement. Des tutos sont postés chaque semaines pour vous.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="{{ asset('favicon.png') }}" />
