--- a/web/sass/codascii/_tutoriels.scss
+++ b/web/sass/codascii/_tutoriels.scss
@@ -1,22 +1,23 @@
 //	Code CSS of the tutorials block in /tutoriels
 .tutoriel{
 	padding: 5px;
-	height: 400px;
 
-	a{
-		display: block;
-		border: 1px solid $brand-primary;
-		border-radius: 10px;
+	.panel{
+		.panel-body{
+			display: flex;
 
-		&:hover{
-			text-decoration: none;
-		}
+			.left-content{
+				width: 46%;
+				border-right: 1px solid $gray-lighter;
+				margin-right: 3%;
+				padding-right: 1%
+			}
 
-		h3{
-			text-align: center;
-			padding: 8px 0px;
-			color: white;
-			background-color: darken($brand-primary, 20%);
+			.right-content{
+				width: 50%;
+				color: $gray-light;
+				font-size: .85em
+			}
 		}
 	}
 }
