--- a/web/sass/codascii/_header.scss
+++ b/web/sass/codascii/_header.scss
@@ -1,4 +1,5 @@
 header{
+	border-top: 3px solid $brand-primary !important;
 	nav{
 		img{
 			margin-top: 2px;
@@ -38,9 +39,9 @@ header{
 				}
 
 				#search{
-					background-color: $gray !important;
+					background-color: $brand-primary !important;
 					padding-top: -1px !important;
-					color: white;
+					color: $gray;
 				}
 			}
 		}
